--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -345,6 +345,34 @@
                         </div>
                     </div>
                     <!-- End details for portfolio project 9 -->
+                    <!-- Start details for lib 10 -->
+                    <div id="slidingDiv9" class="toggleDiv row-fluid single-project">
+                        <div class="span6">
+                            <img src="images/Portfolio09.png" alt="library 10">
+                        </div>
+                        <div class="span6">
+                            <div class="project-description">
+                                <div class="project-title clearfix">
+                                    <h3>Mille Feuilles</h3>
+                                    <span class="show_hide close">
+                                        <i class="icon-cancel"></i>
+                                    </span>
+                                </div>
+                                <div class="project-info">
+                                    <div>
+                                        <span>Address</span>99, avenue Habib Bourguiba Marsa Plage, 2070 La Marsa</div>
+                                    <div>
+                                        <span>Tel</span>71 744 229</div>
+                                    <div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/Mille-FeuillesMarsa-Tunisie-188365364538215/">Readers Corner</a></div>
+                                    <div>
+                                        <span>Link</span>www.librairiemillefeuilles.com/</div>
+                                </div>
+                                <p>map here</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End details for lib 10 -->
                     <!-- Start thumbnails -->
                     <ul id="portfolio-grid" class="thumbnails row">
                         <li class="span4 mix tunis">
@@ -443,6 +471,17 @@
                                 </a>
                                 <h3>Readers Corner</h3>
                                 <p>Thumbnail caption...</p>
+                                <div class="mask"></div>
+                            </div>
+                        </li>
+                        <li class="span4 mix tunis">
+                            <div class="thumbnail">
+                                <img src="images/Portfolio09.png" alt="Library 10">
+                                <a href="#single-project" class="show_hide more" rel="#slidingDiv9">
+                                    <i class="icon-plus"></i>
+                                </a>
+                                <h3>Mille Feuilles</h3>
+                                <p>La Marsa</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
