--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -96,7 +96,7 @@
                 <div id="single-project">
                     <div id="slidingDiv" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio01.png" alt="project 1" />
+                            <img src="images/Portfolio01.png" alt="Library" />
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -124,7 +124,7 @@
                     <!-- Start details for portfolio project 2 -->
                     <div id="slidingDiv1" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio02.png" alt="project 2">
+                            <img src="images/Portfolio02.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -152,7 +152,7 @@
                     <!-- Start details for portfolio project 3 -->
                     <div id="slidingDiv2" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio03.png" alt="project 3">
+                            <img src="images/Portfolio03.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -180,7 +180,7 @@
                     <!-- Start details for portfolio project 4 -->
                     <div id="slidingDiv3" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio04.png" alt="project 4">
+                            <img src="images/Portfolio04.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -208,7 +208,7 @@
                     <!-- Start details for portfolio project 5 -->
                     <div id="slidingDiv4" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio05.png" alt="project 5">
+                            <img src="images/Portfolio05.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -236,7 +236,7 @@
                     <!-- Start details for portfolio project 6 -->
                     <div id="slidingDiv5" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio06.png" alt="project 6">
+                            <img src="images/Portfolio06.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -264,7 +264,7 @@
                     <!-- Start details for portfolio project 7 -->
                     <div id="slidingDiv6" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio07.png" alt="project 7">
+                            <img src="images/Portfolio07.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -292,7 +292,7 @@
                     <!-- Start details for portfolio project 8 -->
                     <div id="slidingDiv7" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio08.png" alt="project 8">
+                            <img src="images/Portfolio08.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -320,7 +320,7 @@
                     <!-- Start details for portfolio project 9 -->
                     <div id="slidingDiv8" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio09.png" alt="project 9">
+                            <img src="images/Portfolio09.png" alt="Library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
@@ -348,7 +348,7 @@
                     <!-- Start details for lib 10 -->
                     <div id="slidingDiv9" class="toggleDiv row-fluid single-project">
                         <div class="span6">
-                            <img src="images/Portfolio09.png" alt="library 10">
+                            <img src="images/Portfolio09.png" alt="library">
                         </div>
                         <div class="span6">
                             <div class="project-description">
