--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -601,7 +601,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Culturel El Menzah 6</h3>
-                                <p>Ariana</p>
+                                <p>El Menzah 6</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -667,7 +667,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Readers Corner</h3>
-                                <p>Thumbnail caption...</p>
+                                <p>La Marsa</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -700,7 +700,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Librairie Clairefontaine - Mutuelleville</h3>
-                                <p>Tunis</p>
+                                <p>Mutuelleville</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -711,7 +711,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Librairie Clairefontaine - El Menzah 6</h3>
-                                <p>Ariana</p>
+                                <p>El Menzah 6</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -722,7 +722,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Librairie Clairefontaine - La Marsa</h3>
-                                <p>Tunis</p>
+                                <p>La Marsa</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -733,7 +733,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>GAÏA</h3>
-                                <p>Tunis</p>
+                                <p>Lac 2</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -755,7 +755,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Librairie l'Avenir Culturel - L.A.C</h3>
-                                <p>Ariana</p>
+                                <p>La Soukra</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
