--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -569,6 +569,34 @@
                         </div>
                     </div>
                     <!-- End details for lib 17 -->
+                    <!-- start details for lib 18 -->
+                    <div id="slidingDiv17" class="toggleDiv row-fluid single-project">
+                        <div class="span6">
+                            <img src="images/Portfolio01.png" alt="Library" />
+                        </div>
+                        <div class="span6">
+                            <div class="project-description">
+                                <div class="project-title clearfix">
+                                    <h3>Librairie Al Kitab La Marsa</h3>
+                                    <span class="show_hide close">
+                                        <i class="icon-cancel"></i>
+                                    </span>
+                                </div>
+                                <div class="project-info">
+                                    <div>
+                                        <span>Address</span>14 Avenue De L'indépendance 2070 La Marsa</div>
+                                    <div>
+                                        <span>Tel</span>92 606 358</div>
+                                    <div>
+                                        <span>Facebook</span><a target="_blank" href="https://www.facebook.com/pages/Librairie-Al-Kitab-La-Marsa/1003487896409637">Librairie Al Kitab La Marsa</a></div>
+                                    <div>
+                                        <span>Link</span>www.librairie-alkitab.com</div>
+                                </div>
+                                <p>map here</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End details for lib 18 -->
                     
                     <!-- Start thumbnails -->
                     <ul id="portfolio-grid" class="thumbnails row">
@@ -756,6 +784,17 @@
                                 </a>
                                 <h3>Librairie l'Avenir Culturel - L.A.C</h3>
                                 <p>La Soukra</p>
+                                <div class="mask"></div>
+                            </div>
+                        </li>
+                        <li class="span4 mix ariana">
+                            <div class="thumbnail">
+                                <img src="images/Portfolio09.png" alt="Library">
+                                <a href="#single-project" class="show_hide more" rel="#slidingDiv17">
+                                    <i class="icon-plus"></i>
+                                </a>
+                                <h3>Librairie Al Kitab La Marsa</h3>
+                                <p>La Marsa</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
