--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -392,7 +392,7 @@
                                     <div>
                                         <span>Tel</span>71 25 53 66 - 22 86 17 83</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - Tunis</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - Tunis</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -420,7 +420,7 @@
                                     <div>
                                         <span>Tel</span> 71 89 45 02 - 24 19 08 68</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - Tunis</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - Tunis</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -448,7 +448,7 @@
                                     <div>
                                         <span>Tel</span>71 23 75 67 - 28 53 75 67</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - El Menzah 6</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - El Menzah 6</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -476,7 +476,7 @@
                                     <div>
                                         <span>Tel</span>71 98 09 11 - 20 24 02 13</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - La Marsa</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/librairiesclairefontaine">Librairie Clairefontaine - La Marsa</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -504,7 +504,7 @@
                                     <div>
                                         <span>Tel</span>71 669 398</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/GAÏA-1108906089159752">GAÏA</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/GAÏA-1108906089159752">GAÏA</a></div>
                                     <div>
                                         <span>Link</span>www.gaïa.tn</div>
                                 </div>
@@ -532,7 +532,7 @@
                                     <div>
                                         <span>Tel</span>97 198 870</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/mouna.books">Librairie Mouna</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/mouna.books">Librairie Mouna</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -560,7 +560,7 @@
                                     <div>
                                         <span>Tel</span>70 682 999</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://fb.com/Librairie-lAvenir-Culturel-LAC-1537828549854899">Librairie l'Avenir Culturel - L.A.C</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://fb.com/Librairie-lAvenir-Culturel-LAC-1537828549854899">Librairie l'Avenir Culturel - L.A.C</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -588,7 +588,7 @@
                                     <div>
                                         <span>Tel</span>92 606 358</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="https://www.facebook.com/pages/Librairie-Al-Kitab-La-Marsa/1003487896409637">Librairie Al Kitab La Marsa</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.facebook.com/pages/Librairie-Al-Kitab-La-Marsa/1003487896409637">Librairie Al Kitab La Marsa</a></div>
                                     <div>
                                         <span>Link</span>www.librairie-alkitab.com</div>
                                 </div>
