--- a/pages/events.html
+++ b/pages/events.html
@@ -68,27 +68,38 @@
                 <div class="container">
                     <!-- Start first slide -->
                     <div class="da-slide">
+                        <h2 class="fittext2">Stardust</h2>
+                        <h4>Rania Attafi</h4>
+                        <p>Beautiful english poetry by a young tunisian author ?</br>Challenge accepted.</br>#StayTuned</p>
+                        <a href="https://www.facebook.com/PopLibris/photos/a.795658770562199.1073741846.366030033525077/1327895770671827/?type=3&theater" target="_blank" class="da-link button">Buy Now</a>
+                        <div class="da-img">
+                            <img src="images/Stardust.jpg" width="200" alt="stardust">
+                        </div>
+                    </div>
+                    <!-- End first slide -->
+                    <!-- Start second slide -->
+                    <div class="da-slide">
                         <h2 class="fittext2">Là Où Tu N'es Jamais Allé</h2>
                         <h4>Salma Inoubli</h4>
                         <p>"Assise sur une marche dans une rue dallée de Rome, désemparée, Maddy a toutes les raisons du monde de se sentir au plus bas : pilier central de son existence, son frère Joël vient s'éteindre..."</p>
                         <a href="https://www.facebook.com/PopLibris/photos/a.370845553043525.1073741830.366030033525077/1233696166758455/?type=3&theater" target="_blank" class="da-link button">Buy Now</a>
                         <div class="da-img">
-                            <img src="images/Slider01.jpg" width="200" alt="image01">
+                            <img src="images/Slider01.jpg" width="200" alt="poplibris">
                         </div>
                     </div>
-                    <!-- End first slide -->
-                    <!-- Start second slide -->
+                    <!-- End second slide -->
+                    <!-- Start third slide -->
                     <div class="da-slide">
                         <h2>D.A.B.D.A</h2>
                         <h4>Khaoula Hosni</h4>
                         <p>Au lendemain de la mort de sa mère de substitution, Aidan Collins a autre chose en tête que de penser aux cinq étapes de son deuil. Entre le retour de la femme qui l’obsède, la nécessité d’affronter la haine des habitants du coin..."</p>
                         <a href="https://www.facebook.com/photo.php?fbid=1372868112789785&set=a.351046031638670.79880.100001998284951&type=3&theater" target="_blank" class="da-link button">Buy Now</a>
                         <div class="da-img">
-                            <img src="images/Slider02.png" width="200" alt="image02">
+                            <img src="images/Slider02.png" width="200" alt="dabda">
                         </div>
                     </div>
-                    <!-- End second slide -->
-                    <!-- Start third slide -->
+                    <!-- End third slide -->
+                    <!-- Start fourth slide -->
                     <div class="da-slide">
                         <h2>Book's Name</h2>
                         <h4>Author</h4>
@@ -98,7 +109,7 @@
                             <img src="images/Slider03.png" width="200" alt="image03">
                         </div>
                     </div>
-                    <!-- Start third slide -->
+                    <!-- End fourth slide -->
                     <!-- Start cSlide navigation arrows -->
                     <div class="da-arrows">
                         <span class="da-arrows-prev"></span>
