--- a/pages/events.html
+++ b/pages/events.html
@@ -73,7 +73,7 @@
                         <p>Beautiful english poetry by a young tunisian author ?</br>Challenge accepted.</br>#StayTuned</p>
                         <a href="https://www.facebook.com/PopLibris/photos/a.795658770562199.1073741846.366030033525077/1327895770671827/?type=3&theater" target="_blank" class="da-link button">Buy Now</a>
                         <div class="da-img">
-                            <img src="images/Stardust.jpg" width="200" alt="stardust">
+                            <img src="images/stardust.jpg" width="200" alt="stardust">
                         </div>
                     </div>
                     <!-- End first slide -->
